<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/take_photo"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:text="@string/take_photo_button" />


    <Button
        android:id="@+id/from_local"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:text="@string/from_local_button" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:text="@string/next_button" />


    <ImageView
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="65dp"
        android:scaleType="fitXY"
        android:layout_gravity="center_horizontal"
        />



<!--</LinearLayout>-->
</RelativeLayout>